package staticproxy;

public interface IStudent {
    String getName();
}
